+ modules(auth/login)

--- a/.ftpconfig
+++ b/.ftpconfig
@@ -5,7 +5,7 @@
     "user": "root",
     "pass": "jin85200--",
     "promptForPass": false,
-    "remote": "/var/www/web_focusmusic",
+    "remote": "/var/www/web_focus",
     "local": "",
     "agent": "",
     "privatekey": "",
